--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,3 +30,12 @@ jobs:
         with:
           distribution: 'zulu' # See 'Supported distributions' for available options
           java-version: '17'
+          
+      - name: Generate test coverage report
+        run: ./gradlew jacocoTestReport
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage
+          path: app/build/reports/jacoco/test/html/
