--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,41 +2,27 @@ name: CI
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "develop", "main" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "develop", "main" ]
 
   workflow_dispatch:
 
 jobs:
-  build:
+  test_coverage:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3.9.0
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Java
+        uses: actions/setup-java@v2
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '17'
-          
-      - name: Build and run tests
+          java-version: 17
+
+      - name: Build and generate coverage report
         run: ./gradlew clean build
 
-      - name: Generate test coverage report
-        run: ./gradlew jacocoTestReport
-
-      - name: Verify test coverage
-        run: |
-              report_path="./build/reports/jacoco/test/jacocoTestReport.xml"
-              
-              coverage_percentage=$(grep -oP '(?<=line-rate=")\d+(\.\d+)?' $report_path)
-              
-              if (( $(echo "$coverage_percentage >= 90" | bc -l) )); then
-                echo "Test coverage is at least 90%"
-              else
-                echo "Test coverage is below 90%"
-                exit 1
-              fi
+      - name: Check coverage percentage
+        run: python3 scripts/check_coverage.py
