--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,13 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3.9.0
         with:
-          java-version: 17
+          distribution: 'zulu'
+          java-version: '17'
 
       - name: Build and generate coverage report
         run: ./gradlew clean build
